# yt-summarize

./: .gitignore  AGENTS.md  LICENSE  PRD.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
tests/: __init__.py  test_cache.py  test_cli.py  test_costs.py  test_schema.py  test_sources.py  test_summarize.py  test_transcribe.py
yt_summarize/: __init__.py  cache.py  cli.py  costs.py
yt_summarize/sources/: __init__.py  local_file.py  youtube.py
yt_summarize/summarize/: __init__.py  map_reduce.py  prompts.py  schema.py
yt_summarize/transcribe/: __init__.py  openai_stt.py
