[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-summarize"
version = "0.1.0"
description = "CLI tool to fetch YouTube transcripts and generate AI summaries"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Daniel Grossfeld", email = "github@klokie.com" }]
keywords = ["youtube", "transcript", "summarize", "cli", "openai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Text Processing :: General",
]
dependencies = [
  "typer>=0.9.0",
  "youtube-transcript-api>=0.6.0",
  "openai>=1.0.0",
  "tiktoken>=0.5.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.1.0", "mypy>=1.0.0"]

[project.scripts]
yt-summarize = "yt_summarize.cli:app"

[project.urls]
Homepage = "https://github.com/klokie/yt-summarize"
Repository = "https://github.com/klokie/yt-summarize"

[tool.setuptools.packages.find]
where = ["."]
include = ["yt_summarize*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # do not perform function calls in argument defaults
  "ARG001", # unused function argument (allow for stub implementations)
]

[tool.ruff.lint.isort]
known-first-party = ["yt_summarize"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
